implementation of POST and DELETE handlers complete
